支付宝支付完成，需要修改流程

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,6 +63,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/rc_ed_public_service_search_selector"
                     android:focusable="true"
+                    android:phoneNumber="true"
                     android:focusableInTouchMode="true"
                     android:hint="@string/app_login_show"
                     android:singleLine="true"
@@ -113,9 +114,10 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/rc_ed_public_service_search_selector"
                     android:focusable="true"
+                    android:digits="1234567890"
                     android:focusableInTouchMode="true"
                     android:hint="@string/app_login_password"
-                    android:inputType="textPassword"
+                    android:inputType="numberPassword"
                     android:singleLine="true"
                     android:textColor="@color/main_regist"
                     android:textColorHint="@color/main_regist" />
