--- a/app/src/main/res/layout/activity_cost_estimate.xml
+++ b/app/src/main/res/layout/activity_cost_estimate.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -73,24 +73,30 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/dudu_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:padding="10dp"
         android:text="嘟嘟专车"
+        android:layout_below="@id/headLLayout"
         android:textColor="#29ABE2"
         android:textSize="8pt" />
 
     <View
+        android:id="@+id/dudu_underline"
         android:layout_width="match_parent"
         android:layout_height="2dp"
+        android:layout_below="@id/dudu_textview"
         android:background="#29ABE2"/>
 
     <LinearLayout
+        android:id="@+id/estimate_fee_ly"
+        android:layout_below="@id/dudu_underline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_gravity="center">
+        android:layout_marginTop="45dp"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/textViewCostEst"
@@ -112,10 +118,25 @@
     </LinearLayout>
 
     <TextView
+        android:layout_below="@id/estimate_fee_ly"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="30dp"
         android:text="此费用仅为估算，实际费用按照交通状况或折扣计算，会有少许偏差" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/button_blue_background"
+        android:text="确认叫车"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+
+</RelativeLayout>
