--- a/app/src/main/res/layout/activity_order_cab.xml
+++ b/app/src/main/res/layout/activity_order_cab.xml
@@ -14,11 +14,23 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center">
 
-        <android.support.design.widget.FloatingActionButton
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--&lt;!&ndash;android:id="@+id/fab"&ndash;&gt;-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@android:drawable/ic_menu_close_clear_cancel" />-->
+        <Button
             android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_menu_close_clear_cancel" />
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/button_blue_background"
+            android:text="长按取消订单"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/cancelPromptTextView"
