--- a/app/src/main/res/layout/content_order_cab.xml
+++ b/app/src/main/res/layout/content_order_cab.xml
@@ -30,7 +30,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"/>
+
+
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/currentChargeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:layout_centerInParent="true"
+        android:background="@android:color/white"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:inputType="textMultiLine"
+        android:text="正在计算当前费用"
+        android:textColor="@android:color/black"
+        android:textSize="8pt" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
