--- a/driver_pro/app/src/main/res/layout/activity_alipay.xml
+++ b/driver_pro/app/src/main/res/layout/activity_alipay.xml
@@ -3,172 +3,179 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@android:color/white"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
         android:padding="10dp">
 
         <View
             android:layout_width="0dp"
-            android:layout_weight="35"
             android:layout_height="1px"
             android:layout_gravity="center"
-            android:background="@android:color/darker_gray"/>
+            android:layout_weight="35"
+            android:background="@android:color/darker_gray" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="30"
-            android:textSize="8pt"
             android:gravity="center"
-            android:text="车费详情"/>
+            android:text="车费详情"
+            android:textSize="8pt" />
+
         <View
             android:layout_width="0dp"
-            android:layout_weight="35"
             android:layout_height="1px"
             android:layout_gravity="center"
-            android:background="@android:color/darker_gray"/>
+            android:layout_weight="35"
+            android:background="@android:color/darker_gray" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:padding="10dp">
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="车费"
-            android:textColor="@android:color/black"
             android:id="@+id/textView2"
-            android:layout_weight="20"
-            android:gravity="center" />
-
-        <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="38"
-            android:id="@+id/textViewFee"
-            android:layout_weight="60"
+            android:layout_weight="20"
             android:gravity="center"
-            android:textSize="30pt"
+            android:text="车费"
             android:textColor="@android:color/black" />
 
         <TextView
+            android:id="@+id/textViewFee"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="60"
+            android:gravity="center"
+            android:text="38"
+            android:textColor="@android:color/black"
+            android:textSize="30pt" />
+
+        <TextView
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="元"
-            android:textColor="@android:color/black"
-            android:id="@+id/textView4"
             android:layout_weight="20"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="元"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
         android:padding="10dp">
 
         <View
             android:layout_width="0dp"
-            android:layout_weight="35"
             android:layout_height="1px"
             android:layout_gravity="center"
-            android:background="@android:color/darker_gray"/>
+            android:layout_weight="35"
+            android:background="@android:color/darker_gray" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="30"
-            android:textSize="8pt"
             android:gravity="center"
-            android:text="支付方式"/>
+            android:text="支付方式"
+            android:textSize="8pt" />
+
         <View
             android:layout_width="0dp"
-            android:layout_weight="35"
             android:layout_height="1px"
             android:layout_gravity="center"
-            android:background="@android:color/darker_gray"/>
+            android:layout_weight="35"
+            android:background="@android:color/darker_gray" />
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/alipay_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingRight="30dp">
 
         <ImageView
+            android:id="@+id/alipayicon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:background="@drawable/alipayicon"
-            android:id="@+id/alipayicon" />
+            android:background="@drawable/alipayicon" />
 
         <TextView
+            android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/alipayicon"
-            android:textColor="@android:color/black"
-            android:textSize="8pt"
             android:text="支付宝支付"
-            android:id="@+id/textView5" />
+            android:textColor="@android:color/black"
+            android:textSize="8pt" />
 
         <RadioButton
+            android:id="@+id/radioButtonAlipay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/radioButtonAlipay"
+            android:layout_alignParentRight="true"
             android:checked="true"
-            android:layout_alignParentRight="true" />
+            android:clickable="false" />
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/wxpay_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:layout_marginTop="10dp">
+        android:paddingRight="30dp">
 
         <ImageView
+            android:id="@+id/weichaticon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:background="@drawable/weichaticon"
-            android:id="@+id/weichaticon" />
+            android:background="@drawable/wepay" />
 
         <TextView
+            android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/weichaticon"
-            android:textColor="@android:color/black"
-            android:textSize="8pt"
             android:text="微信支付"
-            android:id="@+id/textView6" />
+            android:textColor="@android:color/black"
+            android:textSize="8pt" />
 
         <RadioButton
+            android:id="@+id/radioButtonWechat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/radioButtonWechat"
+            android:layout_alignParentRight="true"
             android:checked="false"
-            android:layout_alignParentRight="true" />
+            android:clickable="false"/>
     </RelativeLayout>
 
     <Button
+        android:id="@+id/buttonPayConfirm"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="确认支付"
-        android:textColor="@android:color/white"
-        android:textSize="10pt"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="40dp"
-        android:id="@+id/buttonPayConfirm"
         android:background="@drawable/button_blue_background_selector"
-        android:onClick="pay" />
+        android:onClick="pay"
+        android:text="确认支付"
+        android:textColor="@android:color/white"
+        android:textSize="10pt" />
 
 </LinearLayout>
-
