--- a/driver_pro/app/src/main/res/values/colors.xml
+++ b/driver_pro/app/src/main/res/values/colors.xml
@@ -41,4 +41,6 @@
     <color name="materialBlue">#FF375BF1</color>
     <color name="materialYellow">#FFF7D23E</color>
     <color name="materialGreen">#FF34A350</color>
+
+    <color name="navpage">#FFE1E8EB</color>
 </resources>
