增加历史订单详情界面，历史订单本地数据库缓存，设置界面

--- a/driver_pro/app/src/main/res/drawable/gray_frame_shape.xml
+++ b/driver_pro/app/src/main/res/drawable/gray_frame_shape.xml
@@ -3,9 +3,9 @@
     <item>
         <shape android:shape="rectangle">
             <stroke android:width="1px" android:color="@color/group_list_gray"/>
-        </shape>
+        </shape>x
     </item>
-    <item android:top="1px" android:bottom="1px">
+    <item android:bottom="1px">
         <shape android:shape="rectangle">
             <solid android:color="@color/app_main_theme" />
         </shape>
