--- a/driver_pro/app/src/main/res/layout/activity_orderdetail.xml
+++ b/driver_pro/app/src/main/res/layout/activity_orderdetail.xml
@@ -40,6 +40,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:layout_marginRight="56dp"
                     android:layout_toRightOf="@id/passenger_avatar"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
@@ -70,6 +71,7 @@
                     android:layout_below="@id/myposition_ll"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginRight="56dp"
                     android:layout_toRightOf="@id/passenger_avatar"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
@@ -92,6 +94,7 @@
                         android:textColor="@android:color/white"
                         android:textSize="22sp" />
                 </LinearLayout>
+
 
                 <ImageButton
                     android:id="@+id/passenger_info"
