--- a/app/src/main/res/layout/activity_cost_estimate.xml
+++ b/app/src/main/res/layout/activity_cost_estimate.xml
@@ -1,142 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.guokrspace.duducar.CostEstimateActivity">
 
-    <LinearLayout
-        android:id="@+id/headLLayout"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/white_transparent_with_border_background"
-        android:orientation="vertical">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/de_actionbar_bg"/>
 
-        <FrameLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <LinearLayout
+            android:id="@+id/headLLayout"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="left"
-                android:layout_marginLeft="2dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/startindicator" />
-
-            <TextView
-                android:id="@+id/startPointTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="90"
-                android:gravity="center"
-                android:text="岳麓大道338号"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
-        </FrameLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1sp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="#7fcccccc" />
+            android:background="@drawable/white_transparent_with_border_background"
+            android:orientation="vertical">
 
-        <FrameLayout
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/startindicator" />
+
+                <TextView
+                    android:id="@+id/startPointTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="90"
+                    android:gravity="center"
+                    android:text="岳麓大道338号"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+            </FrameLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1sp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="#7fcccccc" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/destindicator" />
+
+                <TextView
+                    android:id="@+id/destPointTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="90"
+                    android:gravity="center"
+                    android:text="火车站"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+            </FrameLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/dudu_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/headLLayout"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
+            android:text="嘟嘟专车"
+            android:textColor="#29ABE2"
+            android:textSize="8pt" />
+
+        <View
+            android:id="@+id/dudu_underline"
             android:layout_width="match_parent"
-            android:layout_height="40dp">
+            android:layout_height="2dp"
+            android:layout_below="@id/dudu_textview"
+            android:background="#29ABE2" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="left"
-                android:layout_marginBottom="10dp"
-                android:src="@drawable/destindicator" />
+        <LinearLayout
+            android:id="@+id/estimate_fee_ly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dudu_underline"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="45dp">
 
             <TextView
-                android:id="@+id/destPointTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="90"
-                android:gravity="center"
-                android:text="火车站"
+                android:id="@+id/textViewCostEst"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:text="39.9"
                 android:textColor="@android:color/black"
-                android:textSize="16sp" />
-        </FrameLayout>
-    </LinearLayout>
+                android:textSize="32pt" />
 
-    <TextView
-        android:id="@+id/dudu_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:text="嘟嘟专车"
-        android:layout_below="@id/headLLayout"
-        android:textColor="#29ABE2"
-        android:textSize="8pt" />
-
-    <View
-        android:id="@+id/dudu_underline"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_below="@id/dudu_textview"
-        android:background="#29ABE2"/>
-
-    <LinearLayout
-        android:id="@+id/estimate_fee_ly"
-        android:layout_below="@id/dudu_underline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
-        android:layout_centerHorizontal="true">
+            <TextView
+                android:id="@+id/unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:text="元"
+                android:textColor="@android:color/black"
+                android:textSize="8pt" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/textViewCostEst"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:text="39.9"
-            android:textColor="@android:color/black"
-            android:textSize="32pt" />
+            android:layout_below="@id/estimate_fee_ly"
+            android:layout_gravity="center"
+            android:padding="30dp"
+            android:text="此费用仅为估算，实际费用按照交通状况或折扣计算，会有少许偏差" />
 
-        <TextView
-            android:id="@+id/unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:text="元"
-            android:textColor="@android:color/black"
-            android:textSize="8pt" />
-    </LinearLayout>
+        <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/button_blue_background"
+            android:text="确认叫车"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
-    <TextView
-        android:layout_below="@id/estimate_fee_ly"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="30dp"
-        android:text="此费用仅为估算，实际费用按照交通状况或折扣计算，会有少许偏差" />
+    </RelativeLayout>
 
-    <Button
-        android:id="@+id/confirmButton"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/button_blue_background"
-        android:text="确认叫车"
-        android:textColor="@android:color/white"
-        android:textSize="18sp" />
-
-</RelativeLayout>
+</LinearLayout>
