--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,18 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.guokrspace.duducar.PreOrderActivity">
 
-    <!--<android.support.v7.widget.Toolbar-->
-    <!--android:id="@+id/my_toolbar"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="?attr/actionBarSize"-->
-    <!--android:background="?attr/colorPrimary"-->
-    <!--android:elevation="4dp"-->
-    <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
-    <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/de_actionbar_bg"/>
+
 
 
     <!-- As the main content view, the view below consumes the entire
@@ -25,6 +23,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView android:id="@+id/mapview_temp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/dudu_login_logo"
+            android:scaleType="centerInside"
+            android:visibility="gone"/>
 
         <com.baidu.mapapi.map.MapView
             android:id="@+id/bmapView"
@@ -166,12 +170,12 @@
          android:layout_gravity="left" instead. -->
     <!-- The drawer is given a fixed width in dp and extends the full height of
          the container. -->
-    <fragment
+    <!--<fragment
         android:id="@+id/navigation_drawer"
         android:name="com.guokrspace.duducar.NavigationDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        tools:layout="@layout/fragment_navigation_drawer" />
+        tools:layout="@layout/fragment_navigation_drawer" />-->
 
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
