--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-   
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/de_actionbar_bg</item>
+        <item name="colorAccent">@android:color/white</item>
+        <item name="colorPrimaryDark">@color/black_de</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+    </style>
 
     <style name="WinDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
