--- a/app/src/main/res/layout/fragment_order_records.xml
+++ b/app/src/main/res/layout/fragment_order_records.xml
@@ -11,7 +11,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/de_actionbar_bg" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -24,12 +24,18 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             app:column_count="1" />-->
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/order_records_recyclerview"
+        <view
+            android:id="@+id/swipeRefreshLayout"
+            class="android.support.v4.widget.SwipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-    </RelativeLayout>
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/order_records_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </view>
+    </LinearLayout>
 
 
 </LinearLayout>
